Right Panel Complete

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .top-header{
     left: 0;
     right: 0;
-    background-color: #1d00dc;
+    background-color: black;
   }
 .left-half {
     left: 0px;
