--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .right-half {
     position: absolute;
     top: 29.5%;
-    bottom: 0;
+    bottom: 0%;
     width: 50%; 
   }
 
@@ -40,12 +40,12 @@ body {
 .left-half h1{
   margin-top: 20%;
   color: black;
-  font-size: large;
+  font-size: x-large;
 }
 .right-half h1 {
   margin-top: 20%;
   color: black;
-  font-size: large;
+  font-size: x-large;
 }
 
 /*  Section Text - Paragraphs  */
@@ -53,11 +53,22 @@ body {
   color: black;
   margin-left: 10%;
   margin-right: 10%;
-  font-size: small;
+  font-size: medium;
 }
 .right-half p{
   color: black;
   margin-left: 10%;
   margin-right: 10%;
-  font-size: small;
+  font-size: medium;
+}
+
+#myButton {
+  background-color: Black;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 20px;
+  margin-top: 10%;
 }
